# PIE

./: .gitignore  CMakeLists.txt  CMakeUser.cmake  CMakeUserSkel.cmake  PIE.cmake.in  README.md
cmake/: BuildTargets.cmake  Utils.cmake  Win.cmake
resources/: pie.qrc  stylesheet.css
src/: changelog.txt  main.cpp  pie.aps  pie.qrc  pie.rc  stylesheet.css
src/Core/: ActionManager.cpp  ActionManager.h  Algorithm.cpp  Algorithm.h  BasePageElement.cpp  BasePageElement.h  BasePlot.cpp  BasePlot.h  BaseWidgets.cpp  BaseWidgets.h  DatabaseLoader.cpp  DatabaseLoader.h  DisplayData.cpp  DisplayData.h  GeneralWidgets.cpp  GeneralWidgets.h  Network.cpp  Network.h  PageData.cpp  PageData.h  PieUi.cpp  PieUi.h  Plot.cpp  Plot.h  PlotGL.cpp  PlotGL.h  PlotWidgets.cpp  PlotWidgets.h  Processor.cpp  Processor.h  Settings.cpp  Settings.h  Utils.cpp  Utils.h  ViewPort.cpp  WelcomeWidget.cpp  WelcomeWidget.h  WidgetManager.cpp  WidgetManager.h
